@@ -18,9 +18,11 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.locationtech.jts.geom.Coordinate;
@@ -34,6 +36,7 @@ import org.opentripplanner.apis.gtfs.mapping.RouteRequestMapper;
 import org.opentripplanner.ext.fares.impl.DefaultFareService;
 import org.opentripplanner.ext.fares.impl.GtfsFaresService;
 import org.opentripplanner.ext.fares.model.FareRuleSet;
+import org.opentripplanner.framework.application.OTPFeature;
 import org.opentripplanner.framework.time.ServiceDateUtils;
 import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
 import org.opentripplanner.gtfs.mapping.DirectionMapper;
@@ -74,6 +77,10 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
   // TODO: figure out a runtime solution
   private static final DirectionMapper DIRECTION_MAPPER = new DirectionMapper(
     DataImportIssueStore.NOOP
+  );
+
+  private final List<PlaceType> DEFAULT_PLACE_TYPES = List.copyOf(
+    EnumSet.complementOf(EnumSet.of(PlaceType.STATION))
   );
 
   @Override
@@ -127,7 +134,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         .<GraphQLRequestContext>getContext()
         .vehicleParkingService();
 
-      return vehicleParkingService.getBikeParks().collect(Collectors.toList());
+      return vehicleParkingService.getBikeParks().toList();
     };
   }
 
@@ -177,7 +184,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalPlaces();
@@ -224,11 +231,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getCarParks()
             .collect(Collectors.toMap(station -> station.getId().getId(), station -> station));
 
-          return idList.stream().map(carParkMap::get).collect(Collectors.toList());
+          return idList.stream().map(carParkMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getCarParks().collect(Collectors.toList());
+      return vehicleParkingService.getCarParks().toList();
     };
   }
 
@@ -277,6 +284,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
   public DataFetcher<Connection<PlaceAtDistance>> nearest() {
     return environment -> {
       List<FeedScopedId> filterByStops = null;
+      List<FeedScopedId> filterByStations = null;
       List<FeedScopedId> filterByRoutes = null;
       List<String> filterByBikeRentalStations = null;
       // TODO implement
@@ -292,19 +300,15 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       if (filterByIds != null) {
         filterByStops =
           filterByIds.getGraphQLStops() != null
-            ? filterByIds
-              .getGraphQLStops()
-              .stream()
-              .map(FeedScopedId::parse)
-              .collect(Collectors.toList())
+            ? filterByIds.getGraphQLStops().stream().map(FeedScopedId::parse).toList()
+            : null;
+        filterByStations =
+          filterByIds.getGraphQLStations() != null
+            ? filterByIds.getGraphQLStations().stream().map(FeedScopedId::parse).toList()
             : null;
         filterByRoutes =
           filterByIds.getGraphQLRoutes() != null
-            ? filterByIds
-              .getGraphQLRoutes()
-              .stream()
-              .map(FeedScopedId::parse)
-              .collect(Collectors.toList())
+            ? filterByIds.getGraphQLRoutes().stream().map(FeedScopedId::parse).toList()
             : null;
         filterByBikeRentalStations = filterByIds.getGraphQLBikeRentalStations();
         filterByBikeParks = filterByIds.getGraphQLBikeParks();
@@ -323,11 +327,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             }
           })
           .filter(Objects::nonNull)
-          .collect(Collectors.toList())
+          .toList()
         : null;
       List<PlaceType> filterByPlaceTypes = args.getGraphQLFilterByPlaceTypes() != null
         ? args.getGraphQLFilterByPlaceTypes().stream().map(GraphQLUtils::toModel).toList()
-        : null;
+        : DEFAULT_PLACE_TYPES;
 
       List<PlaceAtDistance> places;
       try {
@@ -342,6 +346,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
                 filterByModes,
                 filterByPlaceTypes,
                 filterByStops,
+                filterByStations,
                 filterByRoutes,
                 filterByBikeRentalStations,
                 getTransitService(environment)
@@ -361,7 +366,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       var args = new GraphQLTypes.GraphQLQueryTypeNodeArgs(environment.getArguments());
       String type = args.getGraphQLId().getType();
       String id = args.getGraphQLId().getId();
-      final GraphQLRequestContext context = environment.<GraphQLRequestContext>getContext();
+      final GraphQLRequestContext context = environment.getContext();
       TransitService transitService = context.transitService();
       VehicleParkingService vehicleParkingService = context.vehicleParkingService();
       VehicleRentalService vehicleRentalStationService = context.vehicleRentalService();
@@ -538,7 +543,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalVehicles.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       var formFactorArgs = args.getGraphQLFormFactors();
@@ -581,7 +586,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .stream()
           .map(FeedScopedId::parse)
           .map(transitService::getRouteForId)
-          .collect(Collectors.toList());
+          .toList();
       }
 
       Stream<Route> routeStream = transitService.getAllRoutes().stream();
@@ -596,7 +601,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLTransportModes()
           .stream()
           .map(mode -> TransitMode.valueOf(mode.name()))
-          .collect(Collectors.toList());
+          .toList();
         routeStream = routeStream.filter(route -> modes.contains(route.getMode()));
       }
 
@@ -608,7 +613,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             GraphQLUtils.startsWith(route.getLongName(), name, environment.getLocale())
           );
       }
-      return routeStream.collect(Collectors.toList());
+      return routeStream.toList();
     };
   }
 
@@ -791,7 +796,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         tripStream = tripStream.filter(trip -> feeds.contains(trip.getId().getFeedId()));
       }
 
-      return tripStream.collect(Collectors.toList());
+      return tripStream.toList();
     };
   }
 
@@ -842,11 +847,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getVehicleParkings()
             .collect(Collectors.toMap(station -> station.getId().toString(), station -> station));
 
-          return idList.stream().map(vehicleParkingMap::get).collect(Collectors.toList());
+          return idList.stream().map(vehicleParkingMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getVehicleParkings().collect(Collectors.toList());
+      return vehicleParkingService.getVehicleParkings().toList();
     };
   }
 
@@ -861,11 +866,16 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         .<GraphQLRequestContext>getContext()
         .vehicleRentalService();
 
+      var id = args.getGraphQLId();
+
+      // TODO the fuzzy matching can be potentially removed after a while.
       return vehicleRentalStationService
         .getVehicleRentalStations()
         .stream()
         .filter(vehicleRentalStation ->
-          vehicleRentalStation.getId().toString().equals(args.getGraphQLId())
+          OTPFeature.GtfsGraphQlApiRentalStationFuzzyMatching.isOn()
+            ? stationIdFuzzyMatches(vehicleRentalStation, id)
+            : stationIdMatches(vehicleRentalStation, id)
         )
         .findAny()
         .orElse(null);
@@ -898,7 +908,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalStations();
@@ -908,6 +918,28 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
   @Override
   public DataFetcher<Object> viewer() {
     return environment -> new Object();
+  }
+
+  /**
+   * This matches station's feedScopedId to the given string.
+   */
+  private boolean stationIdMatches(VehicleRentalStation station, String feedScopedId) {
+    return station.getId().toString().equals(feedScopedId);
+  }
+
+  /**
+   * This matches station's feedScopedId to the given string if the string is feed scoped (i.e
+   * contains a `:` separator) or only matches the station's id without the feed to the given
+   * string. This approach can lead to a random station matching the criteria if there are multiple
+   * stations with the same id in different feeds.
+   * <p>
+   * TODO this can be potentially removed after a while, only used by Digitransit as of now.
+   */
+  private boolean stationIdFuzzyMatches(VehicleRentalStation station, String idWithoutFeed) {
+    if (idWithoutFeed != null && idWithoutFeed.contains(":")) {
+      return stationIdMatches(station, idWithoutFeed);
+    }
+    return station.getId().getId().equals(idWithoutFeed);
   }
 
   private TransitService getTransitService(DataFetchingEnvironment environment) {
@@ -957,6 +989,6 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .map(EntitySelector.Stop.class::cast)
           .anyMatch(stop -> args.getGraphQLStop().contains(stop.stopId().toString()))
       )
-      .collect(Collectors.toList());
+      .toList();
   }
 }
